test/arrays/bradc/slices/sliceArray.good
A is:
11 12 13 14 15 16 17 18 19 20
21 22 23 24 25 26 27 28 29 30
31 32 33 34 35 36 37 38 39 40
41 42 43 44 45 46 47 48 49 50
51 52 53 54 55 56 57 58 59 60
61 62 63 64 65 66 67 68 69 70
71 72 73 74 75 76 77 78 79 80
81 82 83 84 85 86 87 88 89 90
91 92 93 94 95 96 97 98 99 100
101 102 103 104 105 106 107 108 109 110

A[<slice>] is:
12 14 16 18 20
32 34 36 38 40
52 54 56 58 60
72 74 76 78 80
92 94 96 98 100

A[<slice>] is:
12 13 14 15 16 17 18 19 20
22 23 24 25 26 27 28 29 30
32 33 34 35 36 37 38 39 40
42 43 44 45 46 47 48 49 50
52 53 54 55 56 57 58 59 60
62 63 64 65 66 67 68 69 70
72 73 74 75 76 77 78 79 80
82 83 84 85 86 87 88 89 90
92 93 94 95 96 97 98 99 100

sliceArray.chpl:16: error: halt reached - array slice out of bounds
note: slice index was (0..9, 2..11) but array bounds are (1..10, 1..10)
note: out of bounds in dimension 0 because slice index 0..9 is not in 1..10
